<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movapp</string>
    <string name="action_settings"></string>
    <string name="title_activity_list"></string>
    <string name="title_activity_result"></string>
    <string name="dummy">Just proof that data is there</string>
    <string name="year">Release year</string>
    <string name="actor">Actor/Director</string>
    <string name="genre">Genre</string>
    <string name="director">Director</string>
    <string name="movie">Movie</string>
    <string name="submit">Submit</string>
    <string name="spoiler">Spoiler</string>
    <string name="link">Link to IMDb</string>
    <string name="toActorList">Actor List</string>
    <string name="toMovieList">Movie List</string>
    <string name="linkToActor">Link to Actors Page</string>
    <string name="region">Region</string>
    <string name="movie_title">Part of Title</string>
    <string name="title_activity_actor_list"></string>
    <string name="title_activity_actor_detail"></string>

    <string name="LinkedMDBLicense">&#8226; <a href="http://www.linkedmdb.org/">LinkedMDb</a> content is licensed under the Creative Commons Attributions License (<a href="http://creativecommons.org/licenses/by/3.0/">CC-BY 3.0</a>).</string>

    <string name="OMDbApiLicense">&#8226; <a href="http://www.omdbapi.com/">OMDb API</a> content is licensed under the Creative Commons Attributions License (<a href="http://creativecommons.org/licenses/by/4.0/">CC-BY 4.0</a>).</string>

    <string name="DBpediaLicense">&#8226; <a href="http://dbpedia.org/About">DBpedia</a> content is licensed under the terms of the <a href="http://en.wikipedia.org/wiki/Wikipedia:Text_of_Creative_Commons_Attribution-ShareAlike_3.0_Unported_License">Creative Commons Attribution-ShareAlike 3.0</a> license and the <a href="http://en.wikipedia.org/wiki/Wikipedia:Text_of_the_GNU_Free_Documentation_License">GNU Free Documentation License</a>.</string>

    <string-array name="year_array">
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1978</item>
        <item>1976</item>
        <item>1974</item>
        <item>1972</item>
        <item>1970</item>
        <item>1968</item>
        <item>1966</item>
        <item>1964</item>
        <item>1962</item>
        <item>1960</item>
        <item>1958</item>
        <item>1956</item>
        <item>1954</item>
        <item>1952</item>
        <item>1950</item>
        <item>1948</item>
        <item>1946</item>
        <item>1944</item>
        <item>1942</item>
        <item>1940</item>
        <item>1935</item>
        <item>1930</item>
        <item>1925</item>
        <item>1920</item>
    </string-array>
    <string-array name="genre_array">
        <item>Action</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Biography</item>
        <item>Black Comedy</item>
        <item>Children</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Family</item>
        <item>Fantasy</item>
        <item>Black-and-white</item>
        <item>History</item>
        <item>Horror</item>
        <item>Indie</item>
        <item>Martial arts</item>
        <item>Music</item>
        <item>Musical</item>
        <item>Mystery</item>
        <item>Romance</item>
        <item>Science Fiction</item>
        <item>Sport</item>
        <item>Spy</item>
        <item>Teen</item>
        <item>Thriller</item>
        <item>War</item>
        <item>Western</item>
    </string-array>
    <string-array name="city_array">
        <item>Alexandria</item>
        <item>Amsterdam</item>
        <item>Athens</item>
        <item>Atlanta, Georgia</item>
        <item>Austin, Texas</item>
        <item>Baltimore, Maryland</item>
        <item>Bangkok</item>
        <item>Barcelona</item>
        <item>Beijing</item>
        <item>Berlin</item>
        <item>Bordeaux</item>
        <item>Boston, Massachusetts</item>
        <item>Brussels</item>
        <item>Budapest</item>
        <item>Calais</item>
        <item>Cannes</item>
        <item>Cape Town</item>
        <item>Chennai</item>
        <item>Chicago, Illinois</item>
        <item>Cleveland, Ohio</item>
        <item>Copenhagen</item>
        <item>Dallas, Texas</item>
        <item>Delhi</item>
        <item>Detroit, Michigan</item>
        <item>Dubai</item>
        <item>DÃ¼sseldorf</item>
        <item>Edinburgh</item>
        <item>Florence</item>
        <item>Frankfurt</item>
        <item>Guangzhou</item>
        <item>Hamburg</item>
        <item>Heidelberg</item>
        <item>Hong Kong</item>
        <item>Houston, Texas</item>
        <item>Indianapolis, Indiana</item>
        <item>Istanbul</item>
        <item>Jerusalem</item>
        <item>Kansas City, Missouri</item>
        <item>Lille</item>
        <item>London</item>
        <item>Long Beach, California</item>
        <item>Los Angeles, California</item>
        <item>Los Angeles, California</item>
        <item>Lyon</item>
        <item>Macau</item>
        <item>Madrid</item>
        <item>Manila</item>
        <item>Mannheim</item>
        <item>Marseille</item>
        <item>Melbourne</item>
        <item>Memphis, Tennessee</item>
        <item>Mexico City</item>
        <item>Miami, Florida</item>
        <item>Miami, Florida</item>
        <item>Milan</item>
        <item>Montreal</item>
        <item>Moscow</item>
        <item>Mumbai</item>
        <item>Munich</item>
        <item>Nantes</item>
        <item>New Orleans, Louisiana</item>
        <item>New York City</item>
        <item>New York City</item>
        <item>Palo Alto, California</item>
        <item>Paris</item>
        <item>Paris</item>
        <item>Philadelphia, Pennsylvania</item>
        <item>Phoenix, Arizona</item>
        <item>Pittsburgh, Pennsylvania</item>
        <item>Portland, Oregon</item>
        <item>Prague</item>
        <item>Rio de Janeiro</item>
        <item>Rome</item>
        <item>Saint-Tropez</item>
        <item>Saint Petersburg</item>
        <item>San Diego, California</item>
        <item>San Francisco, California</item>
        <item>Seattle, Washington</item>
        <item>Seoul</item>
        <item>Shanghai</item>
        <item>St. Louis, Missouri</item>
        <item>Stockholm</item>
        <item>Sydney</item>
        <item>SÃ£o Paulo</item>
        <item>Tampa, Florida</item>
        <item>Tokyo</item>
        <item>Toronto</item>
        <item>Tulsa, Oklahoma</item>
        <item>Vancouver</item>
        <item>Venice</item>
        <item>Vienna</item>
        <item>Warsaw</item>
        <item>Washington, D.C.</item>
    </string-array>
    <string-array name="state_array">
        <item>Afghanistan</item>
        <item>a fictional country</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Argentina</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Belgium</item>
        <item>Bangladesh</item>
        <item>Bolivia</item>
        <item>Brazil</item>
        <item>Bulgaria</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Denmark</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Finland</item>
        <item>France</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Haiti</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Ivory Coast</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Kazakhstan</item>
        <item>Korea</item>
        <item>Kosovo</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Liberia</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Madagascar</item>
        <item>Malta</item>
        <item>Mexico</item>
        <item>Mongolia</item>
        <item>Morocco</item>
        <item>Namibia</item>
        <item>Nepal</item>
        <item>New Zealand</item>
        <item>Nigeria</item>
        <item>Pakistan</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Poland</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>South Africa</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tanzania</item>
        <item>the Bahamas</item>
        <item>the Netherlands</item>
        <item>the Roman Empire</item>
        <item>the United Kingdom</item>
        <item>the United States</item>
        <item>the Czech Republic</item>
        <item>the Democratic Republic of the Congo</item>
        <item>the Dominican Republic</item>
        <item>the Inca Empire</item>
        <item>the Philippines</item>
        <item>Togo</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Ukraine</item>
        <item>Uruguay</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Yugoslavia</item>
    </string-array>

    <string name="title_activity_relation_list">RelationList</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_license">license</string>

</resources>
