<?xml version="1.0" encoding="utf-8"?>
<!-- <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="semanticweb.hws14.movapp.fragments.MovieCriteria"> -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/root_layout" android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:background="#FFFFFF"
        android:layout_weight="1" android:orientation="vertical">

        <Button android:id="@+id/btnActor" android:layout_width="match_parent"
            android:layout_height="@dimen/movie_criteria_button_height" android:text="@string/actor"
            android:background="@drawable/button_background_accordion"
            android:textColor="#FFFFFF">
        </Button>

        <LinearLayout android:id="@+id/panelActor"
            android:orientation="vertical" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_weight="1"
            android:background="#FFFFFF">
            <LinearLayout android:id="@+id/panelActorText"
            android:orientation="horizontal" android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/tvActorName" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="Name of Actor" />
            <EditText android:id="@+id/tfActorName" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:enabled="true"
                android:inputType="textPersonName" />
        </LinearLayout>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/swActor"
                android:layout_gravity="center_horizontal"
                android:checked="false"   />

            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="Name of Director" />
                <EditText android:id="@+id/tfDirectorName" android:layout_width="fill_parent"
                    android:layout_height="wrap_content" android:enabled="true"
                    android:inputType="textPersonName" />
            </LinearLayout>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/swDirector"
                android:layout_gravity="center_horizontal"
                android:checked="false"   />

        </LinearLayout>

        <Button android:id="@+id/btnYear" android:layout_width="fill_parent"
            android:layout_height="@dimen/movie_criteria_button_height" android:text="@string/year"
            android:background="@drawable/button_background_accordion"
            android:textColor="#FFFFFF" />

        <LinearLayout android:id="@+id/panelYear"
            android:orientation="vertical" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_weight="1"
            android:background="#FFFFFF">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:background="#FFFFFF">

                <LinearLayout android:id="@+id/panelYearFrom"
                    android:orientation="horizontal" android:layout_width="fill_parent"
                    android:layout_height="wrap_content" android:layout_weight="1"
                    android:background="#FFFFFF">
                    <TextView android:id="@+id/tvYearFrom" android:layout_width="45dp"
                        android:layout_height="wrap_content" android:text="From" />
                    <Spinner
                        android:id="@+id/spYearFrom"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"></Spinner>

                </LinearLayout>

                <LinearLayout android:id="@+id/panelYearTo"
                    android:orientation="horizontal" android:layout_width="fill_parent"
                    android:layout_height="wrap_content" android:layout_weight="1"
                    android:background="#FFFFFF">
                    <TextView android:id="@+id/tvYearTo" android:layout_width="45dp"
                        android:layout_height="wrap_content" android:text="To" />
                    <Spinner
                        android:id="@+id/spYearTo"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"></Spinner>
                </LinearLayout>


            </LinearLayout>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/swYear"
                android:layout_gravity="top|center_horizontal"
                android:checked="false" />
        </LinearLayout>

        <Button android:id="@+id/btnRegion" android:layout_width="fill_parent"
            android:layout_height="@dimen/movie_criteria_button_height" android:text="@string/region"
            android:background="@drawable/button_background_accordion"
            android:textColor="#FFFFFF" />

        <LinearLayout android:id="@+id/panelRegion"
            android:orientation="vertical" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_weight="1"
            android:background="#FFFFFF">
            <LinearLayout android:id="@+id/panelCountryText"
                android:orientation="horizontal" android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView android:id="@+id/tvCountryName" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="State/Country" />
                <Spinner
                    android:id="@+id/spState"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    ></Spinner>
            </LinearLayout>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/swState"
                android:layout_gravity="center_horizontal"
                android:checked="false"/>


            <LinearLayout android:id="@+id/panelCityText"
                android:orientation="horizontal" android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView android:id="@+id/tvCityName" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="City" />
                <Spinner
                    android:id="@+id/spCity"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    ></Spinner>

            </LinearLayout>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/swCity"
                android:layout_gravity="center_horizontal"
                android:checked="false" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Set"
                    android:layout_centerVertical="true"
                    android:checked="true"
                    android:id="@+id/radio_set"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="Shot"
                    android:id="@+id/radio_shot"/>
            </RadioGroup>

        </LinearLayout>

    <Button android:id="@+id/btnTitle" android:layout_width="fill_parent"
        android:layout_height="@dimen/movie_criteria_button_height" android:text="@string/movie_title"
        android:background="@drawable/button_background_accordion"
        android:textColor="#FFFFFF" />
    <LinearLayout android:id="@+id/panelTitle"
        android:orientation="vertical" android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_weight="1"
        android:background="#FFFFFF">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="Part of Title" />
            <EditText android:id="@+id/tfTitleName" android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </LinearLayout>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/swTitle"
            android:layout_gravity="center_horizontal"
            android:checked="false" />
    </LinearLayout>

    <Button android:id="@+id/btnGenre" android:layout_width="fill_parent"
        android:layout_height="@dimen/movie_criteria_button_height" android:text="@string/genre"
        android:background="@drawable/button_background_accordion"
        android:textColor="#FFFFFF" />

    <LinearLayout android:id="@+id/panelGenre"
        android:orientation="vertical" android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_weight="1"
        android:background="#FFFFFF">
        <LinearLayout android:id="@+id/panelGenreText"
            android:orientation="horizontal" android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/tvGenre" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="Genre" />
            <Spinner
                android:id="@+id/spGenre"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                ></Spinner>
        </LinearLayout>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/swGenre"
            android:layout_gravity="center_horizontal"
            android:checked="false" />
    </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="58dp"
            android:text="@string/submit"
            android:id="@+id/submit_button"
            android:textSize="30dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_background_submit"
            android:layout_margin="5dp" />
    </LinearLayout>
<!--</FrameLayout> -->